--- a/_config.yml
+++ b/_config.yml
@@ -1,69 +1,26 @@
-#
-###################################
-# Site wide configuration
-####################################
-#
-title: dev.claudio.m
-email: cla.klaus@yahoo.it
-description: Yet another programmer's blog
-url: # the base hostname & protocol for your site
+# Dependencies
+markdown:         redcarpet
+highlighter:      pygments
 
+# Permalinks
+permalink:        pretty
+relative_permalinks: true
 
-#
-###################################
-# Jekyll configuration
-####################################
-#
-timezone:          Europe/Paris
-markdown:          kramdown
-highlighter:       rouge
-excerpt_separator: <!--more-->
-permalink:         /articles/:year-:month/:title
+# Setup
+title:            Yet Another Dev Bologger
+tagline:          'A Jekyll theme'
+description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+url:              http://hyde.getpoole.com
+baseurl:          /
 
-kramdown:
-  auto_ids: true
-  footnote_nr: 1
-  entity_output: as_char
-  toc_levels: 1..6
-  enable_coderay: false
+author:
+  name:           'Claudio Masolo'
+  url:            https://twitter.com/mdo
 
-#
-###################################
-# Site Owner configuration
-####################################
-#
-owner:
-  name: Claudio Masolo
-  avatar: avatar.jpg
-  job: "Developer"
-  bio: "Professional developer based in Milan (Italy)"
-  email: cla.klaus@yahoo.it
-  disqus-shortname:
-  twitter: #username
-  facebook: #username
-  google:
-    plus: #username
-    analytics:
-    verify:
-    ad-client:
-    ad-slot:
-  bing-verify:
-  github: klaus82
-  gitlab: #username
-  stackoverflow: #123456/username   from a "http://stackoverflow.com/users/123456/username" link
-  linkedin: #username
-  skype: #username
-  xing: #username
-  instagram: #username
-  lastfm: #username
-  tumblr: #username
-  pinterest: #username
-  foursquare: #username
-  steam: #username
-  dribbble: #username
-  youtube: #username
-  soundcloud: #username
-  weibo: #username
-  flickr: #username
-  500px: #username
-  codepen: #username
+paginate:         5
+
+# Custom vars
+version:          2.1.0
+
+github:
+  repo:           https://github.com/poole/hyde
