update the gh action

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -8,7 +8,7 @@ on:
       - "README.md"
     branches:
       - master
-      - exampleSite
+    #   - exampleSite
   workflow_dispatch:
     # manual run
     inputs:
@@ -46,8 +46,8 @@ jobs:
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          ref: exampleSite
+        # with:
+        #   ref: exampleSite
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
