--- a/hugo.yaml
+++ b/hugo.yaml
@@ -57,7 +57,7 @@ params:
 
   # profile-mode
   profileMode:
-    enabled: true # needs to be explicitly set
+    enabled: false # needs to be explicitly set
     title: Claudio Masolo
     subtitle: "Cloud Engineer | DevOps | Tech Blogger"
     imageUrl: "assets/claudio_2.jpg"
@@ -65,8 +65,8 @@ params:
     imageHeight: 240
     imageTitle: me
     buttons:
-      - name: Posts
-        url: posts
+      # - name: Posts
+      #   url: posts
     #   - name: Tags
     #     url: tags
 
@@ -96,10 +96,10 @@ params:
     hiddenInList: true # hide on list pages and home
     hiddenInSingle: true # hide on single page
 
-  editPost:
-    URL: "https://github.com/<path_to_repo>/content"
-    Text: "Suggest Changes" # edit text
-    appendFilePath: true # to append file path to Edit link
+  # editPost:
+  #   URL: "https://github.com/<path_to_repo>/content"
+  #   Text: "Suggest Changes" # edit text
+  #   appendFilePath: true # to append file path to Edit link
 
   # for search
   # https://fusejs.io/api/options.html
